--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^0.19.0",
         "polished": "^3.4.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-icons": "^3.7.0",
+        "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
+        "reactotron-react-js": "^3.3.2",
+        "reactotron-redux": "^3.1.1",
+        "redux": "^4.0.4",
         "styled-components": "^4.3.2"
     },
     "scripts": {
